# The-Evolution-of-Todo-Mastering-Spec-Driven-Development-Cloud-Native-AI

./: .gitignore  constitution.md  plan.md  specify.md  tasks.md
.claude/: settings.local.json
.specify/memory/: constitution.md
charts/todo/: Chart.yaml  values.yaml
charts/todo/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  secrets.yaml
charts/todo/templates/ai-service/: deployment.yaml  service.yaml
charts/todo/templates/backend/: deployment.yaml  hpa.yaml  service.yaml
charts/todo/templates/frontend/: deployment.yaml  hpa.yaml  service.yaml
history/prompts/constitution/: 001-initial-constitution-ratification.prompt.md
scripts/: deploy-local.sh  test-deployment.sh
todo-console/: .gitignore  README.md  commands.py  formatter.py  models.py  pyproject.toml  storage.py  todo.py
todo-console/tests/: __init__.py  test_cli.py  test_commands.py  test_models.py  test_storage.py
todo-web/: .env.example  docker-compose.dev.yml  docker-compose.yml
todo-web/ai-service/: .gitignore  Dockerfile  pyproject.toml
todo-web/ai-service/app/: __init__.py  config.py  main.py
todo-web/ai-service/app/agent/: __init__.py  config.py  runner.py
todo-web/ai-service/app/mcp/: __init__.py  tools.py
todo-web/ai-service/app/routers/: __init__.py  chat.py
todo-web/ai-service/tests/: test_agent.py  test_tools.py
todo-web/backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
todo-web/backend/api/: index.py
todo-web/backend/app/: config.py  main.py
todo-web/backend/app/db/: __init__.py  session.py
todo-web/backend/app/db/migrations/: env.py
todo-web/backend/app/db/migrations/versions/: 001_initial.py
todo-web/backend/app/middleware/: __init__.py  auth.py
todo-web/backend/app/models/: __init__.py  task.py  user.py
todo-web/backend/app/routers/: __init__.py  auth.py  tasks.py
todo-web/backend/app/services/: __init__.py  auth.py  tasks.py
todo-web/backend/tests/: conftest.py  test_auth.py  test_tasks.py
todo-web/frontend/: .gitignore  Dockerfile  next.config.js  package.json
todo-web/frontend/src/__tests__/components/: task-form.test.tsx  task-list.test.tsx
todo-web/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
todo-web/frontend/src/app/(auth)/login/: page.tsx
todo-web/frontend/src/app/(auth)/register/: page.tsx
todo-web/frontend/src/app/(dashboard)/: layout.tsx
todo-web/frontend/src/app/(dashboard)/chat/: page.tsx
todo-web/frontend/src/components/auth/: login-form.tsx  register-form.tsx
todo-web/frontend/src/components/chat/: chat-interface.tsx
todo-web/frontend/src/components/layout/: header.tsx  sidebar.tsx
todo-web/frontend/src/components/task/: task-card.tsx  task-form.tsx  task-list-skeleton.tsx  task-list.tsx
todo-web/frontend/src/types/: index.ts
(+3 files in other folders)
