[project]
name = "todo-console"
version = "1.0.0"
description = "A simple command-line todo application - Phase I of the Todo App Hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
todo = "todo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["models.py", "storage.py", "formatter.py", "commands.py", "todo.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]
